# sys-pulse

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  run.sh  terminalmonitor.cpp  terminalmonitor.h
.github/workflows/: cmake-single-platform.yml
